# a-share-alpha-engine

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
config/: current_baseline.json  theme_universe.json
docs/: daily_post_close_review_sop.md  daily_post_close_review_template.md  live_validation_plan.md  model_upgrade_roadmap_v1.md  multifactor_v2.md  parameter_optimization_plan.md  repository_workflow.md  version_roadmap.md
reports/: README.md
reports/current_baseline/: latest_backtest.json  latest_backtest.md
reports/daily_reviews/: 2026-03-25_review.md
reports/multifactor_v2_walk_forward_v1/: latest_walk_forward.json  latest_walk_forward.md
reports/paper_accounts/: paper_current_baseline_500k.json  paper_current_baseline_500k.md
scripts/: run_current_baseline.sh
src/qstrategy_v2/: __init__.py  backtest.py  cli.py  config.py  daily_workflow.py  data.py  diagnostics.py  eastmoney.py  factors.py  models.py  optimizer.py  paper_account.py  portfolio.py  preprocessing.py  reporting.py  review.py  universe.py
tests/: test_multifactor_v2.py  test_tushare_provider_helpers.py
